--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -24,6 +24,36 @@ body, html {
   color: white;
 }
 
+.guide {
+  display: flex;
+  flex-direction: row;
+  width: 860px;
+  align-items: center;
+}
+
+.hero {
+  height: 60px;
+  width: 160px;
+  font-size: 14px;
+  color: #0F4C81;
+  padding: 10px;
+  background: #eaf8f9;
+  border: 1px solid #00ABC0;
+}
+
+.herotitle {
+  font-size: 13px;
+  font-weight: bold;
+  color: #0F4C81;
+}
+
+.heroinstruction {
+  margin-top: 10px;
+  font-size: 13px;
+  font-weight: normal;
+  color: #0F4C81;
+}
+
 .banner {
   height: 60px;
   width: 100%;
@@ -32,6 +62,7 @@ body, html {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  ;
   align-content: center;
 }
 
@@ -49,7 +80,7 @@ body, html {
 
 .summit {
   font-weight: medium;
-  font-size: 16px;
+  font-size: 18px;
   color: white;
 }
 
@@ -58,7 +89,7 @@ body, html {
   align-items: center;
   display: flex;
   flex-direction: row;
-  font-size: 14px;
+  font-size: 16px;
   margin: 0;
   padding: 0;
 }
@@ -77,6 +108,17 @@ menuitem {
   margin: 10px;
 }
 
+.dimmed {
+  opacity: .6;
+  font-weight: normal;
+  text-decoration: none;
+  color: white;
+}
+
+.dimmed:hover {
+  opacity: 1;
+}
+
 .lit {
   opacity: 1;
   font-weight: bold;
@@ -91,6 +133,15 @@ menuitem {
   flex-wrap: wrap;
 }
 
+.bpbox {
+  width: 300px;
+  height: 300px;
+  /* border: 1px solid #eaf8f9; */
+  margin: 20px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
 .box {
   width: 300px;
   height: 300px;
@@ -98,7 +149,6 @@ menuitem {
   margin: 20px;
   margin-top: 40px;
   margin-bottom: 0px;
-  overflow: auto;
 }
 
 .boxheader {
@@ -132,6 +182,16 @@ menuitem {
   font-size: 14px;
 }
 
+.stethascope {
+  margin: 10px;
+  height: 24px;
+}
+
+.beaker {
+  margin: 10px;
+  height: 24px;
+}
+
 .boxitemlabel {
   color: #0F4C81;
   font-size: 12px;
@@ -143,4 +203,345 @@ menuitem {
   flex-direction: row;
   color: #0F4C81;
   font-size: 14px;
+}
+
+.personal {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.name {
+  font-weight: bold;
+  margin: 10px;
+}
+
+.street {
+  margin-left: 10px;
+}
+
+.details {
+  margin: 10px;
+}
+
+.city {
+  margin-left: 10px;
+}
+
+.zipcode {
+  margin-left: 10px;
+}
+
+.links {
+  width: 50%;
+}
+
+.creditcard {
+  width: 50px;
+  display: flex;
+  align-self: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  align-content: flex-end;
+  float: right;
+  margin: 20px;
+  margin-top: 10px;
+}
+
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.measurements {
+  display: flex;
+  flex-direction: row;
+}
+
+.heart {
+  display: flex;
+  flex-direction: column;
+}
+
+.body {
+  width: 300px;
+  height: 640px;
+  border: 1px dotted #eaf8f9;
+  margin: 20px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.bodyimage {
+  height: 100%;
+}
+
+.ruler {
+  width: 50px;
+  height: 100% display:flex;
+  flex-direction: column;
+}
+
+.figure {
+  display: flex;
+  flex-direction: row;
+  height: 600px;
+}
+
+.line {
+  display: flex;
+  flex-direction: row;
+  height: 224px;
+}
+
+.rulea {
+  width: 50%;
+  border-right: 1px solid #99DDE5;
+}
+
+.height {
+  font-size: 14px;
+  color: #99DDE5;
+  align-self: center;
+  height: 30px;
+  margin-top: 10px;
+}
+
+.weight {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  align-items: center;
+}
+
+.ruleb {
+  width: 50%;
+}
+
+.padding {
+  height: 30px;
+}
+
+.scales {
+  height: 42px;
+  padding: 20px;
+  display: flex;
+}
+
+.weightindex {
+  display: flex;
+  flex-direction: column;
+}
+
+.weightitem {
+  color: #255D8C;
+  font-size: 12px;
+  padding: 10px;
+}
+
+.health {
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.healthitem {
+  color: #00ABC0;
+}
+
+.smoker {
+  color: #0F4C81;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.smokerlabel {
+  font-weight: normal;
+}
+
+.smokerstatus {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.architecture {
+  width: 860px;
+  height: 700px;
+  display: flex;
+  flex-direction: row;
+  padding-top: 30px;
+  border-top: 1px dashed #00ABC0;
+}
+
+.canvas {
+  height: 600px;
+  width: 600px;
+}
+
+.archdetails {
+  height: 500px;
+  width: 230px;
+  margin-left: 20px;
+  background: white;
+  border: 1px solid #00ABC0;
+  display: flex;
+  flex-direction: column;
+}
+
+.archtitle {
+  font-size: 13px;
+  font-weight: bold;
+  /* margin: 10px; */
+  color: #0F4C81;
+  padding: 10px;
+  background: #eaf8f9;
+  min-height: 40px;
+}
+
+.archsubtitle {
+  font-size: 11px;
+  font-weight: normal;
+  margin: 10px;
+  color: #0F4C81;
+}
+
+.archtechlisttile {
+  font-size: 12px;
+  font-weight: bold;
+  /* margin: 10px; */
+  color: #0F4C81;
+  border-top: 1px solid #eaf8f9;
+  padding: 5px;
+  padding-left: 10px;
+  background: #eaf8f9;
+  line-height: 18px;
+  /* padding-left: 10px; */
+}
+
+.archtechlist {
+  font-size: 11px;
+  font-weight: normal;
+  /* margin-left: -10px; */
+  color: #0F4C81;
+  line-height: 18px;
+  border-bottom: 1px solid #eaf8f9;
+  border-top: 1px solid #eaf8f9;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
+  min-height: 100px;
+}
+
+.archtechlink {
+  font-size: 11px;
+  font-weight: normal;
+  margin: 10px;
+  color: #0F4C81;
+}
+
+.archtechdetails {
+  font-size: 12px;
+  font-weight: normal;
+  margin: 10px;
+  color: #0F4C81;
+  line-height: 18px;
+  min-height: 180px;
+}
+
+.archlink {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.archbutton {
+  background: #00ABC0;
+  border: none;
+  height: 30px;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+}
+
+.index {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 4px;
+}
+
+.item:hover {
+  border: 1px dashed #F88F58;
+}
+
+.itemstep {
+  height: 40px;
+  text-align: center;
+  width: 40px;
+  background: #eaf8f9;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  color: #0F4C81;
+  font-size: 14px;
+  font-weight: bold;
+  border: 1px solid #00ABC0;
+}
+
+.stepbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 50px;
+}
+
+.itemtitle {
+  height: 30px;
+  text-align: center;
+  width: 100px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  font-size: 12px;
+  color: #0F4C81;
 }
