--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -35,35 +35,42 @@ body, html {
   height: 60px;
   width: 160px;
   font-size: 14px;
-  color: #0F4C81;
+  color: #444444;
   padding: 10px;
-  background: #eaf8f9;
-  border: 1px solid #00ABC0;
+  background: #F6F9FC;
 }
 
 .herotitle {
   font-size: 13px;
   font-weight: bold;
-  color: #0F4C81;
+  color: #444444;
 }
 
 .heroinstruction {
   margin-top: 10px;
   font-size: 13px;
   font-weight: normal;
-  color: #0F4C81;
+  color: #444444;
+}
+
+.disclaimer {
+  margin: 10px;
+  color: #888;
+  font-size: 14px;
+  margin-top: 50px;
 }
 
 .banner {
   height: 60px;
   width: 100%;
-  background: #00ABC0;
+  background: #FFF4F2;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  ;
   align-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .brand {
@@ -78,10 +85,10 @@ body, html {
   margin: 10px;
 }
 
-.example {
+.Fictional {
   font-weight: medium;
   font-size: 18px;
-  color: white;
+  color: #444;
 }
 
 .menu {
@@ -101,7 +108,7 @@ body, html {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  color: white;
+  color: #444;
 }
 
 menuitem {
@@ -112,7 +119,7 @@ menuitem {
   opacity: .6;
   font-weight: normal;
   text-decoration: none;
-  color: white;
+  color: #444;
 }
 
 .dimmed:hover {
@@ -123,7 +130,7 @@ menuitem {
   opacity: 1;
   font-weight: bold;
   text-decoration: none;
-  color: white;
+  color: #444;
 }
 
 .boxes {
@@ -145,21 +152,41 @@ menuitem {
 .box {
   width: 300px;
   height: 300px;
-  border: 1px solid #99DDE5;
+  /* border: 1px solid #99DDE5; */
   margin: 20px;
   margin-top: 40px;
   margin-bottom: 0px;
+  display: block;
+  font-size: 16px;
+  line-height: 1.5;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.05) 0px 5px 15px 0px;
+  transform: translate3d(0px, 0px, 0px);
+  cursor: pointer;
+  overflow: hidden;
+  text-decoration: none;
+  /* padding: 20px; */
+  background: rgb(255, 255, 255);
+  border-radius: 4px;
+  transition: all 150ms ease-out 0s;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .boxheader {
-  background: #CCEEF2;
-  height: 50px;
-  border-bottom: 1px solid #99DDE5;
+  background: #F6F9FC;
   width: 100%;
   align-items: center;
   display: flex;
   flex-direction: row;
-  font-size: 14px;
+  font-size: 14px min-height: 50px;
+  justify-content: space-between;
+}
+
+.listbox {
+  width: 300px;
+  margin-bottom: 0px;
+  overflow: scroll;
 }
 
 .boxicon {
@@ -168,13 +195,16 @@ menuitem {
 }
 
 .boxlabel {
-  color: #0F4C81;
+  color: #444;
   font-weight: bold;
+  padding: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 .boxitem {
   height: 42px;
-  border-bottom: 1px solid #99DDE5;
+  border-bottom: 1px solid #F6F9FC;
   width: 100%;
   align-items: center;
   display: flex;
@@ -193,7 +223,7 @@ menuitem {
 }
 
 .boxitemlabel {
-  color: #0F4C81;
+  color: #444;
   font-size: 12px;
   font-weight: normal;
 }
@@ -201,7 +231,7 @@ menuitem {
 .info {
   display: flex;
   flex-direction: row;
-  color: #0F4C81;
+  color: #444;
   font-size: 14px;
 }
 
@@ -304,12 +334,12 @@ menuitem {
 
 .rulea {
   width: 50%;
-  border-right: 1px solid #99DDE5;
+  border-right: 1px solid #444444;
 }
 
 .height {
   font-size: 14px;
-  color: #99DDE5;
+  color: #444444;
   align-self: center;
   height: 30px;
   margin-top: 10px;
@@ -343,7 +373,7 @@ menuitem {
 }
 
 .weightitem {
-  color: #255D8C;
+  color: #444444;
   font-size: 12px;
   padding: 10px;
 }
@@ -356,11 +386,11 @@ menuitem {
 }
 
 .healthitem {
-  color: #00ABC0;
+  color: #444444;
 }
 
 .smoker {
-  color: #0F4C81;
+  color: #444444;
   display: flex;
   flex-direction: row;
   padding: 20px;
@@ -386,7 +416,7 @@ a {
   display: flex;
   flex-direction: row;
   padding-top: 30px;
-  border-top: 1px dashed #00ABC0;
+  border-top: 1px dashed #eeeeee;
 }
 
 .canvas {
@@ -399,7 +429,7 @@ a {
   width: 230px;
   margin-left: 20px;
   background: white;
-  border: 1px solid #00ABC0;
+  border: 1px solid #F6F9FC;
   display: flex;
   flex-direction: column;
 }
@@ -408,9 +438,9 @@ a {
   font-size: 13px;
   font-weight: bold;
   /* margin: 10px; */
-  color: #0F4C81;
+  color: #444444;
   padding: 10px;
-  background: #eaf8f9;
+  background: #F6F9FC;
   min-height: 40px;
 }
 
@@ -418,18 +448,18 @@ a {
   font-size: 11px;
   font-weight: normal;
   margin: 10px;
-  color: #0F4C81;
+  color: #444444;
 }
 
 .archtechlisttile {
   font-size: 12px;
   font-weight: bold;
   /* margin: 10px; */
-  color: #0F4C81;
-  border-top: 1px solid #eaf8f9;
+  color: #444444;
+  border-top: 1px solid #F6F9FC;
   padding: 5px;
   padding-left: 10px;
-  background: #eaf8f9;
+  background: #F6F9FC;
   line-height: 18px;
   /* padding-left: 10px; */
 }
@@ -438,10 +468,10 @@ a {
   font-size: 11px;
   font-weight: normal;
   /* margin-left: -10px; */
-  color: #0F4C81;
+  color: #444444;
   line-height: 18px;
-  border-bottom: 1px solid #eaf8f9;
-  border-top: 1px solid #eaf8f9;
+  border-bottom: 1px solid #F6F9FC;
+  border-top: 1px solid #F6F9FC;
   padding-bottom: 20px;
   padding-top: 20px;
   margin-top: 0;
@@ -454,14 +484,14 @@ a {
   font-size: 11px;
   font-weight: normal;
   margin: 10px;
-  color: #0F4C81;
+  color: #444444;
 }
 
 .archtechdetails {
   font-size: 12px;
   font-weight: normal;
   margin: 10px;
-  color: #0F4C81;
+  color: #444444;
   line-height: 18px;
   min-height: 180px;
 }
@@ -511,16 +541,15 @@ a {
   height: 40px;
   text-align: center;
   width: 40px;
-  background: #eaf8f9;
+  background: #F6F9FC;
   border-radius: 20px;
   justify-content: center;
   align-items: center;
   align-content: center;
   display: flex;
-  color: #0F4C81;
+  color: #444444;
   font-size: 14px;
   font-weight: bold;
-  border: 1px solid #00ABC0;
 }
 
 .stepbox {
@@ -543,5 +572,5 @@ a {
   align-content: center;
   display: flex;
   font-size: 12px;
-  color: #0F4C81;
+  color: #444444;
 }
